--- a/Flipcart Clone/style1.css
+++ b/Flipcart Clone/style1.css
@@ -145,3 +145,9 @@ nav {
     overflow: hidden;
 
 }
+
+.flex-all-center{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
