--- a/Flipcart Clone/style1.css
+++ b/Flipcart Clone/style1.css
@@ -151,3 +151,36 @@ nav {
     justify-content: center;
     align-items: center;
 }
+
+@media  screen and (max-width:1000px) {
+
+    nav{
+        flex-direction: column;
+    }
+
+    .slider{
+        height:23vh;
+    }
+    
+    .logo{
+        justify-content: center;
+        margin: 12px 0;
+    }
+
+    nav ul{
+        justify-content: center;
+        height: 34px;
+    }
+
+    .search{
+        justify-content: center;
+    }
+
+    .search input{
+        margin: 12px 16px;
+    }
+
+    .card-item img{
+        width: 140px;
+    }
+}
